{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 202,
  "lineage": "a5fca61f-cf59-7ba2-154d-ba788b3e6732",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-006e2f9fa7597680a",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-028482193f3c2d305",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028482193f3c2d305",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dotoryeee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d54ee96cffb17b35",
            "private_dns": "ip-10-0-0-56.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.56",
            "public_ip": "13.209.14.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f895203f9cb4f6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-013fa30a404336db5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd9fc43121058c93",
            "tags": {
              "Name": "public-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013fa30a404336db5"
            ]
          },
          "dependencies": [
            "aws_key_pair.dotoryeee",
            "aws_security_group.public_ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f1068284b9eca92",
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:instance/i-00b34fee9a2c1f011",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b34fee9a2c1f011",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dotoryeee",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b526001ff54daa1f",
            "private_dns": "ip-10-0-0-239.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.239",
            "public_ip": "3.36.49.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c89181a9a1ead7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-013fa30a404336db5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd9fc43121058c93",
            "tags": {
              "Name": "public-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013fa30a404336db5"
            ]
          },
          "dependencies": [
            "aws_key_pair.dotoryeee",
            "aws_security_group.public_ec2",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:internet-gateway/igw-081eae536339e5e08",
            "id": "igw-081eae536339e5e08",
            "owner_id": "737382971423",
            "tags": {
              "Name": "practice_02"
            },
            "vpc_id": "vpc-019e7228577de9179"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04b50893654ef7017",
            "owner_id": "737382971423",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081eae536339e5e08",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_table"
            },
            "vpc_id": "vpc-019e7228577de9179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092f063d3bb3a539c",
            "route_table_id": "rtb-04b50893654ef7017",
            "subnet_id": "subnet-0fd9fc43121058c93"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:security-group/sg-013fa30a404336db5",
            "description": "allow SSH from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013fa30a404336db5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow SSH",
            "name_prefix": "",
            "owner_id": "737382971423",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-for-publicEC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-019e7228577de9179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:security-group/sg-0a647378eda13eb14",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a647378eda13eb14",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013fa30a404336db5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG-for-RDS",
            "name_prefix": "",
            "owner_id": "737382971423",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-019e7228577de9179"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-02db8db74f431315d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02db8db74f431315d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737382971423",
            "vpc_id": "vpc-019e7228577de9179"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-03ac03d36d8beca6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03ac03d36d8beca6c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "737382971423",
            "vpc_id": "vpc-019e7228577de9179"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:subnet/subnet-0fd9fc43121058c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fd9fc43121058c93",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737382971423",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-019e7228577de9179"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:737382971423:vpc/vpc-019e7228577de9179",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e532893f0a305c65",
            "default_route_table_id": "rtb-081463a1c35ec854b",
            "default_security_group_id": "sg-0ea953e229e1873da",
            "dhcp_options_id": "dopt-7ca0c217",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-019e7228577de9179",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081463a1c35ec854b",
            "owner_id": "737382971423",
            "tags": {
              "Name": "vpc_practice_02"
            }
          }
        }
      ]
    }
  ]
}